Update renderer to shade engraved text